Search funktion og refak af hjemmeside.

--- a/indlaeg/29-08.md
+++ b/indlaeg/29-08.md
@@ -1,3 +1,9 @@
+---
+title: 29-08-2025 - Proces - Ugen der gik: 35
+date: 2025-08-29
+tags: [Proces]
+---
+
 # Ugentligt – 29/08-2025
 
 ## __Erfaring__  
