Rettet dobbelt encoding tilbage til normal hahaha

--- a/indlaeg/15-08.md
+++ b/indlaeg/15-08.md
@@ -4,11 +4,11 @@ date: 2025-08-15
 tags: [Proces]
 ---
 
-# FÃ¸rste Uge afsluttende indlÃ¦g
+# Første Uge afsluttende indlæg
 
 ---
 
-## Hvad har der vÃ¦ret pÃ¥ planen i dag?
+## Hvad har der været på planen i dag?
 
 
 
@@ -26,7 +26,7 @@ tags: [Proces]
 
 ---
 
-## Lort pÃ¥ styret eller styr pÃ¥ lortet ?
+## Lort på styret eller styr på lortet ?
 
 
 
