--- a/indlaeg/29-08.md
+++ b/indlaeg/29-08.md
@@ -4,55 +4,55 @@ date: 2025-08-29
 tags: [Proces]
 ---
 
-# Ugentligt â€“ 29/08-2025
+# Ugentligt - 29/08-2025
 
 ## __Erfaring__  
-I de sidste to uger har jeg forsÃ¸gt at finde en struktur, der kunne hjÃ¦lpe mig med at skabe overblik over semesteret. Det har dog vist sig svÃ¦rere end forventet, og jeg har endnu ikke fundet en model, der fungerede tilfredsstillende.  
+I de sidste to uger har jeg forsøgt at finde en struktur, der kunne hjælpe mig med at skabe overblik over semesteret. Det har dog vist sig sværere end forventet, og jeg har endnu ikke fundet en model, der fungerede tilfredsstillende.  
 
-Som konsekvens har jeg besluttet at streamline processen, sÃ¥ jeg fremadrettet laver:  
-- Ugentlige indlÃ¦g om, hvad der er sket siden sidst  
-- Opslag under hvert valgfag med status pÃ¥, hvad jeg arbejder med  
+Som konsekvens har jeg besluttet at streamline processen, så jeg fremadrettet laver:  
+- Ugentlige indlæg om, hvad der er sket siden sidst  
+- Opslag under hvert valgfag med status på, hvad jeg arbejder med  
 
-Undervejs har jeg oplevet, at mit hoved blev trukket i mange retninger pÃ¥ Ã©n gang, hvilket gjorde det svÃ¦rt at skabe en sammenhÃ¦ngende struktur. Det har fÃ¸rt til et nyt motto:  
+Undervejs har jeg oplevet, at mit hoved blev trukket i mange retninger på 1 gang, hvilket gjorde det svært at skabe en sammenhængende struktur. Det har ført til et nyt motto:  
 
-> *â€œEn ting ad gangenâ€*  
+> *"En ting ad gangen"*  
 
-Samtidig har jeg valgt at lÃ¦gge mit eksperiment med en alternativ CI/CD-lÃ¸sning til side, da den nuvÃ¦rende opsÃ¦tning fungerer tilstrÃ¦kkeligt.  
+Samtidig har jeg valgt at lægge mit eksperiment med en alternativ CI/CD-løsning til side, da den nuværende opsætning fungerer tilstrækkeligt.  
 
 ## __Refleksion__  
-Jeg kan mÃ¦rke, at det at have mange projekter kÃ¸rende pÃ¥ Ã©n gang drÃ¦ner mit fokus. NÃ¥r jeg forsÃ¸ger at hÃ¥ndtere flere ting samtidigt, mister jeg nemt overblikket og risikerer at sÃ¦nke kvaliteten af mit arbejde.  
+Jeg kan mærke, at det at have mange projekter kørende på 1 gang dræner mit fokus. Når jeg forsøger at håndtere flere ting samtidigt, mister jeg nemt overblikket og risikerer at sænke kvaliteten af mit arbejde.  
 
-Mit motto *â€œEn ting ad gangenâ€* fÃ¸les derfor som en vigtig rettesnor for at kunne arbejde mere koncentreret og med fÃ¦rre afbrydelser. Jeg oplever, at det giver mig en ro at parkere mindre presserende idÃ©er (som eksperimentet med CI/CD), sÃ¥ jeg i stedet kan prioritere det, der skaber vÃ¦rdi her og nu.  
+Mit motto *â€œEn ting ad gangen"* føles derfor som en vigtig rettesnor for at kunne arbejde mere koncentreret og med færre afbrydelser. Jeg oplever, at det giver mig en ro at parkere mindre presserende idÃ©er (som eksperimentet med CI/CD), så jeg i stedet kan prioritere det, der skaber værdi her og nu.  
 
 ## __Begrebsdannelse__  
-Her ser jeg en tydelig kobling til **Kolbs lÃ¦ringscyklus**, hvor jeg:  
+Her ser jeg en tydelig kobling til **Kolbs læringscyklus**, hvor jeg:  
 1. Har en konkret erfaring (manglende struktur).  
 2. Reflekterer over, hvorfor det ikke fungerede.  
-3. Udleder et nyt begreb: *â€œEn ting ad gangenâ€*.  
-4. PlanlÃ¦gger at afprÃ¸ve dette i praksis med en ny struktur.  
+3. Udleder et nyt begreb: *â€œEn ting ad gangen"*.  
+4. Planlægger at afprøve dette i praksis med en ny struktur.  
 
-Kombinationen af Kolb og **SMART-mÃ¥l** giver mig et teoretisk fundament til at arbejde mere systematisk med lÃ¦ring og mÃ¥lsÃ¦tning. I praksis betyder det, at jeg kan sÃ¦tte mere konkrete delmÃ¥l og bruge refleksionerne som styringsvÃ¦rktÃ¸j.  
+Kombinationen af Kolb og **SMART-mål** giver mig et teoretisk fundament til at arbejde mere systematisk med læring og målsætning. I praksis betyder det, at jeg kan sætte mere konkrete delmål og bruge refleksionerne som styringsværktøj.  
 
-## __AfprÃ¸vning__  
-Min plan er at indfÃ¸re en fast rytme med ugentlige indlÃ¦g, hvor jeg arbejder mig metodisk gennem Kolbs cyklus. Derudover vil jeg aktivt formulere SMART-mÃ¥l for at skabe mere tydelige succeskriterier.  
+## __Afprøvning__  
+Min plan er at indføre en fast rytme med ugentlige indlæg, hvor jeg arbejder mig metodisk gennem Kolbs cyklus. Derudover vil jeg aktivt formulere SMART-mål for at skabe mere tydelige succeskriterier.  
 
-PÃ¥ den mÃ¥de afprÃ¸ver jeg en ny kombination af teori og praksis, der kan understÃ¸tte mit motto:  
+På den måde afprøver jeg en ny kombination af teori og praksis, der kan understøtte mit motto:  
 
-> *â€œEn ting ad gangenâ€*  
+> *"En ting ad gangen"*  
 
-## __SMART-mÃ¥l__  
-Mit mÃ¥l for de kommende fire uger er:  
+## __SMART-mål__  
+Mit mål for de kommende fire uger er:  
 
-*Jeg vil udgive mindst Ã©t ugentligt portefÃ¸ljenotat (Planen er hver fredag), der fÃ¸lger Kolbs lÃ¦ringscyklus og inkluderer et SMART-mÃ¥l, sÃ¥ jeg gradvist etablerer en ensartet struktur i min portefÃ¸lje.*  
+*Jeg vil udgive mindst 1 ugentligt porteføljenotat (Planen er hver fredag), der følger Kolbs læringscyklus og inkluderer et SMART-mål, så jeg gradvist etablerer en ensartet struktur i min portefølje.*  
 
-Dette mÃ¥l er:  
-- **Specifikt** (ugentligt portefÃ¸ljenotat)  
-- **MÃ¥lbart** (mindst Ã©t indlÃ¦g pr. uge)  
+Dette mål er:  
+- **Specifikt** (ugentligt porteføljenotat)  
+- **Målbart** (mindst Ã©t indlæg pr. uge)  
 - **Accepteret** (giver mening for mit arbejde)  
-- **Realistisk** (kan gennemfÃ¸res pÃ¥ en uge)  
-- **TidsafgrÃ¦nset** (fire uger)  
+- **Realistisk** (kan gennemføres på en uge)  
+- **Tidsafgrænset** (fire uger)  
 
 ## __Perspektiv__  
-Jeg tager med mig, at struktur ikke opstÃ¥r af sig selv, men krÃ¦ver aktivt arbejde og bevidste valg. Ved at fokusere pÃ¥ Ã©n ting ad gangen og samtidig bruge modeller som Kolb og SMART, kan jeg skabe en lÃ¦ringsproces, der bÃ¥de er mere rolig og mere effektiv.  
+Jeg tager med mig, at struktur ikke opstår af sig selv, men kræver aktivt arbejde og bevidste valg. Ved at fokusere på 1 ting ad gangen og samtidig bruge modeller som Kolb og SMART, kan jeg skabe en læringsproces, der både er mere rolig og mere effektiv.  
 
 Det bliver et vigtigt skridt i mit semesters proces struktur.
