--- a/indlaeg/15-08.md
+++ b/indlaeg/15-08.md
@@ -1,5 +1,5 @@
 ---
-title: 15-08-2025 - Proces - Ugen der gik: 33
+title: 15-08-2025 - Uge 33 Proces - Ugen der gik
 date: 2025-08-15
 tags: [Proces]
 ---
