--- a/indlaeg/29-08.md
+++ b/indlaeg/29-08.md
@@ -1,5 +1,5 @@
 ---
-title: 29-08-2025 - Proces - Ugen der gik: 35
+title: 29-08-2025 - Ugen der gik - Uge 35
 date: 2025-08-29
 tags: [Proces]
 ---
