--- a/indlaeg/29-08.md
+++ b/indlaeg/29-08.md
@@ -1,5 +1,5 @@
 ---
-title: 29-08-2025 - Ugen der gik - Uge 35
+title: 29-08-2025 - Uge 35 Proces - Ugen der gik
 date: 2025-08-29
 tags: [Proces]
 ---
